--- a/templates/search_bar.tmpl
+++ b/templates/search_bar.tmpl
@@ -5,9 +5,10 @@
 				<div class="input-group-prepend">
 					<select name="prompt" style="border-top-right-radius: 0px; border-bottom-right-radius: 0px;" class="prompt-select custom-select border-secondary" id="query-prompt" aria-label="Prompt">
 						<option {{ 'selected' if prompt == '1' }} value="1">How to</option>
-						<option {{ 'selected' if prompt == '2' }} value="2">What is</option>
+						<!--<option {{ 'selected' if prompt == '2' }} value="2">What is</option>
 						<option {{ 'selected' if prompt == '3' }} value="3">Examples of</option>
-						<option {{ 'selected' if prompt == '4' }} value="4">Open search</option>
+						<option {{ 'selected' if prompt == '4' }} value="4">Open search</option>-->
+						<option {{ 'selected' if prompt == '4' }} value="4">Youtube</option>
 					</select>
 				</div>
 				<div class="stt-input form-control border-0">
