decouple comments from sharing; add button to remove from playlist

--- a/templates/friend.html
+++ b/templates/friend.html
@@ -27,7 +27,7 @@
 </div>
 {% if comments|length > 0 %}
 <h1>Shared content</h1>
-{% include 'comment_list.tmpl' %}
+{% include 'shared_list.tmpl' %}
 {% endif %}
 
 {% from 'dialog.tmpl' import dialog %}
