--- a/templates/user.html
+++ b/templates/user.html
@@ -18,8 +18,8 @@
 				<div class="col-12">
 					<div class="card-body">
 						<p>
-						<span class="name mr-3"><strong>Name:</strong> {{ user.name }}</span>
-						<span class="email"><strong>Email:</strong> {{ user.email }}</span>
+            <span class="name mr-3"><strong><i class="fas fa-user"></i> Name:</strong> {{ user.name }}</span>
+            <span class="email"><strong><i class="fas fa-envelope"></i> Email:</strong> {{ user.email }}</span>
 						</p>
 						<p>
 						<a class="btn btn-danger" href="/logout"> <i class="fas fa-sign-out-alt"></i> Logout </a>
