--- a/static/style.css
+++ b/static/style.css
@@ -63,6 +63,7 @@
 }
 
 /* ============= playlist selector ========= */
+
 .hidden-input {
 	opacity: 0;
 	position: absolute;
@@ -83,12 +84,14 @@
 .selector-card:not(.active):hover {
   color: white;
 }
-.selector-card:not(.active):hover img {
-  opacity: .8;
+.selector-card img {
+  opacity: .5;
 }
-.selector-card:not(.active) img {
-  opacity: .3;
+
+.selector-card .playlist-regular {
+  background-color: transparent !important;
 }
+
 
 /* ============= card selector ============= */
 .hidden-checkbox {
@@ -235,6 +238,14 @@
 
 a:target .bubble-text {
 	border: 3px solid var(--primary);
+}
+
+.shared-list-users {
+  margin: 0rem 1rem 0rem 1rem;
+}
+
+.shared-list-comment {
+  display: inline-block; margin-left: 1rem; margin-top: 1rem; background: #ddd; padding: .5rem 1rem .5rem 1rem;border-radius: .5rem;position: relative; left: 0px; top: 0px;
 }
 
 /* ================ search bar =============== */
