--- a/templates/playlist_selector.tmpl
+++ b/templates/playlist_selector.tmpl
@@ -1,6 +1,6 @@
 <div class="row mb-2 btn-group" data-toggle="buttons">
   {% for folder in folders %}
-    <div class="col-6 align-items-stretch">
+    <div class="col-12 col-sm-6 col-md-4 col-lg-3 align-items-stretch">
       <div class="card mb-3 selector-card btn btn-secondary {{ 'active' if folder.selected }}">
         <div class="card-img-4 playlist-container {{ "playlist-empty" if folder.videos|length == 0 else "playlist-regular" }}">
           {% for i in range(4) -%}
