--- a/templates/base.tmpl
+++ b/templates/base.tmpl
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-		<title>{% block title %}{% endblock %}{% block appname %} - HowToApp{% endblock %}</title>
+		<title>{% block title %}{% endblock %}{% block appname %} - SkillsTube{% endblock %}</title>
 		<script src="/static/dist/js/jquery-3.3.1.slim.min.js"></script>
 		<link rel="stylesheet" href="/static/dist/css/bootstrap.min.css">
 		<link rel="stylesheet" href="/static/dist/css/font-awesome.css">
